Fix isset()/empty() for non-trivial object elements (API change - read_property now accepts an extra element) Fixes bug #24436